--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -747,11 +747,11 @@
     left: 0;
     right: 0;
     width: 100%;
-    height: 50px;
+    height: 55px;
     border: 0;
     border-top: 1px solid #ddd;
     border-radius: 0 0 8px 8px;
-    padding: 10px 50px 10px 15px;
+    padding: 10px 55px 10px 15px;
     resize: none;
     box-sizing: border-box;
 }
@@ -814,23 +814,37 @@
 
 .vidscript-slider-chat-message-container {
     display: flex;
+    flex-direction: column;
     width: 100%;
+    gap: 5px;
 }
 
 .vidscript-slider-chat-message-user-container {
-    justify-content: flex-start;
+    align-items: start;
 }
 
 .vidscript-slider-chat-message-ai-container {
-    justify-content: flex-end;
+    align-items: end;
+}
+
+.vidscript-slider-chat-message-loading-container {
+    align-items: end;
 }
 
 .vidscript-slider-chat-message-error-container {
-    justify-content: center;
+    align-items: center;
+}
+
+.vidscript-slider-chat-message-header {
+    font-size: 13px;
+    margin: 0 10px;
+    color: #6b6161;
+    margin: 0 10px;
 }
 
 .vidscript-slider-chat-message-error {
     color: red;
+    border-radius: 18px;
 }
 
 .vidscript-slider-chat-message-user {
@@ -840,8 +854,11 @@
     color: #fff;
     padding: 10px;
     margin-bottom: 10px;
-    border-radius: 20px;
-    border-bottom-right-radius: 4px;
+    border-radius: 18px 18px 18px 0;
+    -webkit-border-radius: 18px 18px 18px 0;
+    -moz-border-radius: 18px 18px 18px 0;
+    -ms-border-radius: 18px 18px 18px 0;
+    -o-border-radius: 18px 18px 18px 0;
 }
 
 .vidscript-slider-chat-message-ai {
@@ -852,8 +869,11 @@
     color: #000;
     padding: 10px;
     margin-bottom: 10px;
-    border-radius: 20px;
-    border-bottom-left-radius: 4px;
+    border-radius: 18px 18px 0 18px;
+    -webkit-border-radius: 18px 18px 0 18px;
+    -moz-border-radius: 18px 18px 0 18px;
+    -ms-border-radius: 18px 18px 0 18px;
+    -o-border-radius: 18px 18px 0 18px;
 }
 
 .vidscript-slider-chat-message {
@@ -861,9 +881,8 @@
     word-wrap: break-word;
     overflow-wrap: break-word;
     padding: 10px 15px;
-    border-radius: 18px;
     margin: 2px 0;
-    line-height: 1.75em;
+    line-height: 1.5em;
 }
 
 .vidscript-slider-chat-message ul,
