FEAT :: Implement post sharing

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -996,6 +996,7 @@
     justify-content: space-between;
     gap: 30px;
     margin-bottom: 20px;
+    border-bottom: 1px solid #e5e7eb;
 }
 
 .vidscript-popup-header-title {
