--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -513,7 +513,8 @@
 }
 
 /* Slider Header :: Start */
-#vidscript-slider-header {
+#vidscript-slider-header,
+.vidscript-popup-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -521,14 +522,16 @@
     border-bottom: 1px solid #e5e7eb;
 }
 
-#vidscript-slider-header-title {
+#vidscript-slider-header-title,
+.vidscript-popup-header-title {
     font-size: 2.5rem;
     color: #574a4a;
     font-weight: 600;
     margin: 0;
 }
 
-#vidscript-slider-header-actions {
+#vidscript-slider-header-actions,
+.vidscript-popup-header-actions {
     display: flex;
     align-items: center;
     gap: 0.5rem;
@@ -991,18 +994,11 @@
 }
 
 .vidscript-popup-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 30px;
-    margin-bottom: 20px;
-    border-bottom: 1px solid #e5e7eb;
+    padding: 0 0 0.75rem 0;
 }
 
 .vidscript-popup-header-title {
-    font-size: 20px;
-    font-weight: bold;
-    color: #574a4a;
+    font-size: 2rem;
 }
 
 #vidscript-translation-lang-selector-popup-content {
