--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -418,7 +418,6 @@
     border-radius: 8px;
     padding: 5px 0;
     position: relative;
-    cursor: pointer;
     transition: background 0.3s ease;
     display: flex;
     align-items: center;
@@ -428,6 +427,8 @@
     cursor: pointer;
     z-index: 10002;
     pointer-events: auto;
+    color: white;
+    border: 0;
 }
 
 #vidscript-full-screen-selector:hover {
