--- a/src/styles.css
+++ b/src/styles.css
@@ -17,11 +17,15 @@ body {
     border-bottom: 1px solid #e5e7eb;
 }
 
+#vidscript-popup-logo {
+    width: 150px;
+    margin: 0 0 0.5rem 0;
+}
+
 #vidscript-popup-title {
     font-size: 1.125rem;
     line-height: 1.75rem;
     font-weight: 600;
-    margin: 0 0 0.5rem 0;
 }
 
 #vidscript-popup-header-results-count {
